--- a/main.css
+++ b/main.css
@@ -184,7 +184,7 @@ nav > .navwrap{
     height:300px;
     position: absolute;
     margin-left: 10px;
-    transition:left 0.5s ease-out;
+    transition:all 0.5s ease-out;
     z-index: 10;
 }
 .cp > .tub > .slide > .wrap > li{
